--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
         </nav>
 
-        <button class="btn btn-primary">Book Now</button>
+        <button type="button" onclick="location.href='booking.html'" class="btn btn-primary">Book Now</button>
 
       </div>
     </div>
@@ -172,7 +172,7 @@
           <div class="btn-group">
             <button class="btn btn-primary">Learn more</button>
 
-            <button class="btn btn-secondary">Book now</button>
+            <button type="button" onclick="location.href='booking.html'" class="btn btn-secondary">Book now</button>
           </div>
 
         </div>
@@ -440,7 +440,7 @@
                     <span>/ per person</span>
                   </p>
 
-                  <button class="btn btn-secondary">Book Now</button>
+                  <button type="button" onclick="location.href='booking.html'" class="btn btn-secondary">Book Now</button>
 
                 </div>
 
@@ -587,7 +587,7 @@
                     <span>/ per person</span>
                   </p>
 
-                  <button class="btn btn-secondary">Book Now</button>
+                  <button type="button" onclick="location.href='booking.html'" class="btn btn-secondary">Book Now</button>
 
                 </div>
 
