--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
                     <span>/ per person</span>
                   </p>
 
-                  <button class="btn btn-secondary">Book Now</button>
+                  <button type="button" onclick="location.href='booking.html'" class="btn btn-secondary">Book Now</button>
 
                 </div>
 
