--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <ul class="social-list">
 
           <li>
-            <a href="#" class="social-link">
+            <a href="https://www.facebook.com/aksihol" class="social-link">
               <ion-icon name="logo-facebook"></ion-icon>
             </a>
           </li>
@@ -91,7 +91,7 @@
           </li>
 
           <li>
-            <a href="#" class="social-link">
+            <a href="https://www.youtube.com/@akashsihol4386" class="social-link">
               <ion-icon name="logo-youtube"></ion-icon>
             </a>
           </li>
@@ -148,9 +148,6 @@
     </div>
 
   </header>
-
-
-
 
 
   <main>
