--- a/booking.html
+++ b/booking.html
@@ -1,221 +1,190 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Booking Form - Travel agancy</title>
-
-  <!-- 
-    - favicon
-  -->
-  <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
-
-  <!-- 
-    - custom css link
-  -->
-  <link rel="stylesheet" href="./assets/css/style.css">
-
-  <!-- 
-    - google font link
-  -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&family=Poppins:wght@400;500;600;700&display=swap"
-    rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Booking Form - Travel Agency</title>
+    <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+	<style>
+		/* Optional: Add some basic styling */
+		body {
+			font-family: Arial, sans-serif;
+			margin: 0;
+			padding: 20px;
+			display: flex;
+			justify-content: flex-end; /* Aligns content to the right */
+			background-color: #ffffff; /* Background color for the body */
+		}
+		
+		.header {
+			background-color: #808080; /* Grey background color for the header */
+			padding: 10px;
+		}
+		
+		.header-top, .header-bottom {
+			/* Ensure header content stays visible */
+			color: #fff; /* Text color for header content */
+		}
+	
+		.overlay {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			background-color: rgba(0, 0, 0, 0.5); /* Adjust opacity as needed */
+			z-index: 1; /* Ensure overlay is behind header content */
+		}
+		
+		.header-btn-group button {
+			color: #fff; /* Button icon color */
+		}
+	
+		.social-link ion-icon {
+			color: #e0200f; /* Social media icon color */
+		}
+	
+		/* Adjust other styles as needed */
+		.form-group {
+			margin-bottom: 10px;
+		}
+		.form-group label {
+			display: block;
+			margin-bottom: 5px; /* Adjust spacing for labels */
+		}
+		.form-group input, .form-group select {
+			width: 100%;
+			padding: 8px;
+			box-sizing: border-box;
+		}
+		.form-group input[type="submit"] {
+			background-color: #4CAF50;
+			color: white;
+			border: none;
+			cursor: pointer;
+		}
+	</style>
+	
 </head>
-
 <body id="top">
 
-  <!-- 
-    - #HEADER
-  -->
+	<header class="header" data-header>
+		<div class="overlay" data-overlay></div>
+		<div class="header-top">
+			<div class="container">
+				<a href="#" class="logo">
+					<img src="./assets/images/logo.svg" alt="Himachal Trip logo">
+				</a>
+				<div class="header-btn-group">
+					<button class="search-btn" aria-label="Search">
+						<ion-icon name="search"></ion-icon>
+					</button>
+					<button class="nav-open-btn" aria-label="Open Menu" data-nav-open-btn>
+						<ion-icon name="menu-outline"></ion-icon>
+					</button>
+				</div>
+			</div>
+		</div>
+		<div class="header-bottom">
+			<div class="container">
+				<ul class="social-list">
+					<li>
+						<a href="https://www.facebook.com/aksihol" class="social-link" target="_blank" rel="noopener noreferrer">
+							<ion-icon name="logo-facebook" aria-label="Facebook"></ion-icon>
+						</a>
+					</li>
+					<li>
+						<a href="#" class="social-link">
+							<ion-icon name="logo-twitter" aria-label="Twitter"></ion-icon>
+						</a>
+					</li>
+					<li>
+						<a href="https://www.youtube.com/@akashsihol4386" class="social-link" target="_blank" rel="noopener noreferrer">
+							<ion-icon name="logo-youtube" aria-label="YouTube"></ion-icon>
+						</a>
+					</li>
+				</ul>
+				<nav class="navbar" data-navbar>
+					<div class="navbar-top">
+						<a href="#" class="logo">
+							<img src="./assets/images/logo-blue.svg" alt="Himachal Trip logo">
+						</a>
+						<button class="nav-close-btn" aria-label="Close Menu" data-nav-close-btn>
+							<ion-icon name="close-outline"></ion-icon>
+						</button>
+					</div>
+					<ul class="navbar-list">
+						<li>
+							<a href="#home" class="navbar-link" data-nav-link>Home</a>
+						</li>
+						<li>
+							<a href="#" class="navbar-link" data-nav-link>About Us</a>
+						</li>
+						<li>
+							<a href="#destination" class="navbar-link" data-nav-link>Destination</a>
+						</li>
+						<li>
+							<a href="#package" class="navbar-link" data-nav-link>Packages</a>
+						</li>
+						<li>
+							<a href="#gallery" class="navbar-link" data-nav-link>Gallery</a>
+						</li>
+						<li>
+							<a href="#contact" class="navbar-link" data-nav-link>Contact Us</a>
+						</li>
+					</ul>
+				</nav>
+			</div>
+		</div>
+	</header>
+	
 
-  <header class="header" data-header>
+	<main>
+		<form id="bookingForm">
+			<div class="form-group">
+				<label for="name">Name:</label>
+				<input type="text" id="name" name="name" required>
+			</div>
+			<div class="form-group">
+				<label for="email">Email:</label>
+				<input type="email" id="email" name="email" required>
+			</div>
+			<div class="form-group">
+				<label for="phone">Phone:</label>
+				<input type="tel" id="phone" name="phone" required>
+			</div>
+			<div class="form-group">
+				<label for="date">Date:</label>
+				<input type="date" id="date" name="date" required>
+			</div>
+			<div class="form-group">
+				<label for="numberofpeople">Number of People:</label>
+				<input type="number" id="numberofpeople" name="numberofpeople" required>
+			</div>
+			<div class="form-group">
+				<label for="service">Service:</label>
+				<select id="service" name="service" required>
+					<option value="">Select a service</option>
+					<option value="Service 1">Service 1</option>
+					<option value="Service 2">Service 2</option>
+					<option value="Service 3">Service 3</option>
+				</select>
+			</div>
+			<div class="form-group">
+				<input type="submit" value="Book Now">
+			</div>
+		</form>
+	</main>
+	
 
-    <div class="overlay" data-overlay></div>
-
-    <div class="header-top">
-      <div class="container">
-
-        <a href="tel:+01123456790" class="helpline-box">
-
-          <div class="icon-box">
-            <ion-icon name="call-outline"></ion-icon>
-          </div>
-
-          <div class="wrapper">
-            <p class="helpline-title">For Further Inquires :</p>
-
-            <p class="helpline-number">+91 9380948319</p>
-          </div>
-
-        </a>
-
-        <a href="#" class="logo">
-          <img src="./assets/images/logo.svg" alt="Himachal Trip logo">
-        </a>
-
-        <div class="header-btn-group">
-
-          <button class="search-btn" aria-label="Search">
-            <ion-icon name="search"></ion-icon>
-          </button>
-
-          <button class="nav-open-btn" aria-label="Open Menu" data-nav-open-btn>
-            <ion-icon name="menu-outline"></ion-icon>
-          </button>
-
-        </div>
-
-      </div>
-    </div>
-
-    <div class="header-bottom">
-      <div class="container">
-
-        <ul class="social-list">
-
-          <li>
-            <a href="https://www.facebook.com/aksihol" class="social-link">
-              <ion-icon name="logo-facebook"></ion-icon>
-            </a>
-          </li>
-
-          <li>
-            <a href="#" class="social-link">
-              <ion-icon name="logo-twitter"></ion-icon>
-            </a>
-          </li>
-
-          <li>
-            <a href="https://www.youtube.com/@akashsihol4386" class="social-link">
-              <ion-icon name="logo-youtube"></ion-icon>
-            </a>
-          </li>
-
-        </ul>
-
-        <nav class="navbar" data-navbar>
-
-          <div class="navbar-top">
-
-            <a href="#" class="logo">
-              <img src="./assets/images/logo-blue.svg" alt="Himachal Trip logo">
-            </a>
-
-            <button class="nav-close-btn" aria-label="Close Menu" data-nav-close-btn>
-              <ion-icon name="close-outline"></ion-icon>
-            </button>
-
-          </div>
-
-          <ul class="navbar-list">
-
-            <li>
-              <a href="#home" class="navbar-link" data-nav-link>home</a>
-            </li>
-
-            <li>
-              <a href="#" class="navbar-link" data-nav-link>about us</a>
-            </li>
-
-            <li>
-              <a href="#destination" class="navbar-link" data-nav-link>destination</a>
-            </li>
-
-            <li>
-              <a href="#package" class="navbar-link" data-nav-link>packages</a>
-            </li>
-
-            <li>
-              <a href="#gallery" class="navbar-link" data-nav-link>gallery</a>
-            </li>
-
-            <li>
-              <a href="#contact" class="navbar-link" data-nav-link>contact us</a>
-            </li>
-
-          </ul>
-
-        </nav>
-
-      </div>
-    </div>
-
-  </header>
-
-<style>
-    /* Optional: Add some basic styling */
-    body {
-        font-family: Arial, sans-serif;
-		margin: 0;
-        padding: 20px;
-        display: flex;
-        justify-content: flex-end; /* Aligns content to the right */
-    }
-    form {
-        max-width: 300px;
-        width: 100%; /* Ensures the form doesn't exceed 500px */
-    }
-    .form-group {
-        margin-bottom: 10px;
-    }
-    .form-group label {
-        display: block;
-        margin-bottom: 10px;
-    }
-    .form-group input, .form-group select {
-        width: 100%;
-        padding: 8px;
-        box-sizing: border-box;
-    }
-    .form-group input[type="submit"] {
-        background-color: #4CAF50;
-        color: white;
-        border: none;
-        cursor: pointer;
-    }
-</style>
-</head>
-<body>
-
-<form id="bookingForm">
-    <div class="form-group">
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required>
-    </div>
-    <div class="form-group">
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
-    </div>
-    <div class="form-group">
-        <label for="phone">Phone:</label>
-        <input type="tel" id="phone" name="phone" required>
-    </div>
-    <div class="form-group">
-        <label for="date">Date:</label>
-        <input type="date" id="date" name="date" required>
-    </div>
-    <div class="form-group">
-        <label for="numberofpeople">Number of People:</label>
-        <input type="number" id="numberofpeople" name="numberofpeople" required>
-    </div>
-    <div class="form-group">
-        <label for="service">Service:</label>
-        <select id="service" name="service" required>
-            <option value="">Select a service</option>
-            <option value="Service 1">Service 1</option>
-            <option value="Service 2">Service 2</option>
-            <option value="Service 3">Service 3</option>
-        </select>
-    </div>
-    <div class="form-group">
-        <input type="submit" value="Book Now">
-    </div>
-</form>
+<footer>
+    <!-- Your footer content here -->
+</footer>
 
 <script src="booking_form.js"></script>
 
