--- a/Gallery Page/gallery.html
+++ b/Gallery Page/gallery.html
@@ -41,132 +41,132 @@
     </div>
   </header>
 
+
+  <!-- 
+    - #Main part
+  -->
+
   <main>
     <section class="hero" id="home">
       <div class="container">
-        <h2 class="h1 hero-title">Fill Out the Enquiry Form</h2>
-        <p class="hero-text">Fill the Enquiry form to Get Call From Our Expert.</p>
+        <h2 class="h1 hero-title">Response From Our Client</h2>
+        <p class="hero-text">Have A look</p>
       </div>
+
+
     </section>
 
-
-  <title>Gallery Page</title>
-  <link rel="stylesheet" href="gallery.css">
-</head>
-<body>
-  <header>
-    <h1>Gallery</h1>
-  </header>
-  <main id="gallery">
-    <!-- Gallery items will be dynamically added here -->
+      Gallery
+      
+    </section>
   </main>
-  <script src="gallery.js"></script>
-</body>
-</html>
+
+  
 
 
-
-
- <!-- 
+  <!-- 
     - #FOOTER
   -->
 
-<footer class="footer">
+  <footer class="footer">
 
-  <div class="footer-top">
-    <div class="container">
+    <div class="footer-top">
+      <div class="container">
 
-      <div class="footer-brand">
+        <div class="footer-brand">
 
-        <a href="#" class="logo">
-          <img src="./assets/images/logo.svg" alt="Himachal Trips">
-        </a>
+          <a href="#" class="logo">
+            <img src="./assets/images/logo.svg" alt="Himachal Trips">
+          </a>
 
-        <p class="footer-text">
-        TBD
-        </p>
+          <p class="footer-text">
+          TBD
+          </p>
+
+        </div>
+
+        <div class="footer-contact">
+
+          <h13 class="contact-title">Contact Us</h13>
+
+          <p class="contact-text">
+            Feel free to contact and reach us !!
+          </p>
+
+          <ul>
+
+            <li class="contact-item">
+              <ion-icon name="call-outline"></ion-icon>
+
+              <a href="tel:+9380948319" class="contact-link">+91-9380948319</a>
+            </li>
+
+            <li class="contact-item">
+              <ion-icon name="mail-outline"></ion-icon>
+
+              <a href="mailto:info.tourly.com" class="contact-link">info216213@gmail.com</a>
+            </li>
+
+            <li class="contact-item">
+              <ion-icon name="location-outline"></ion-icon>
+
+              <address>Kangra, Himachal Pradesh</address>
+            </li>
+
+          </ul>
+
+        </div>
+
+        <div class="footer-form">
+
+          <p class="form-text">
+            Subscribe our newsletter for more update & news !!
+          </p>
+
+          <form action="" class="form-wrapper">
+            <input type="email" name="email" class="input-field" placeholder="Enter Your Email" required>
+
+            <button type="submit" class="btn btn-secondary">Subscribe</button>
+          </form>
+
+        </div>
 
       </div>
+    </div>
 
-      <div class="footer-contact">
+    <div class="footer-bottom">
+      <div class="container">
 
-        <h13 class="contact-title">Contact Us</h13>
-
-        <p class="contact-text">
-          Feel free to contact and reach us !!
+        <p class="copyright">
+          &copy; 2024 <a href="">Himachal Trips</a>. All rights reserved
         </p>
 
-        <ul>
+        <ul class="footer-bottom-list">
 
-          <li class="contact-item">
-            <ion-icon name="call-outline"></ion-icon>
-
-            <a href="tel:+9380948319" class="contact-link">+91-9380948319</a>
+          <li>
+            <a href="#" class="footer-bottom-link">Privacy Policy</a>
           </li>
 
-          <li class="contact-item">
-            <ion-icon name="mail-outline"></ion-icon>
-
-            <a href="mailto:info.tourly.com" class="contact-link">info216213@gmail.com</a>
+          <li>
+            <a href="#" class="footer-bottom-link">Term & Condition</a>
           </li>
 
-          <li class="contact-item">
-            <ion-icon name="location-outline"></ion-icon>
-
-            <address>Kangra, Himachal Pradesh</address>
+          <li>
+            <a href="#" class="footer-bottom-link">FAQ</a>
           </li>
 
         </ul>
 
       </div>
-
-      <div class="footer-form">
-
-        <p class="form-text">
-          Subscribe our newsletter for more update & news !!
-        </p>
-
-        <form action="" class="form-wrapper">
-          <input type="email" name="email" class="input-field" placeholder="Enter Your Email" required>
-
-          <button type="submit" class="btn btn-secondary">Subscribe</button>
-        </form>
-
-      </div>
-
     </div>
-  </div>
 
-  <div class="footer-bottom">
-    <div class="container">
-
-      <p class="copyright">
-        &copy; 2024 <a href="">Himachal Trips</a>. All rights reserved
-      </p>
-
-      <ul class="footer-bottom-list">
-
-        <li>
-          <a href="#" class="footer-bottom-link">Privacy Policy</a>
-        </li>
-
-        <li>
-          <a href="#" class="footer-bottom-link">Term & Condition</a>
-        </li>
-
-        <li>
-          <a href="#" class="footer-bottom-link">FAQ</a>
-        </li>
-
-      </ul>
-
-    </div>
-  </div>
-
-</footer>
+  </footer>
 
 
- <!-- 
+
+
+
+  <!-- 
     - #GO TO TOP
   -->
 
@@ -192,5 +192,17 @@
 </body>
 
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
 
 
