--- a/More Destination/more destination.html
+++ b/More Destination/more destination.html
@@ -41,41 +41,50 @@
     </div>
   </header>
 
+
+
   <main>
     <section class="hero" id="home">
       <div class="container">
-        <h2 class="h1 hero-title">Fill Out the Enquiry Form</h2>
-        <p class="hero-text">Fill the Enquiry form to Get Call From Our Expert.</p>
+        <h200 class="h1 hero-title">Explore The New places</h200>
+        <p class="hero-text">Checkout the Other Destinations </p>
       </div>
     </section>
 
  
  
        <main>
-           <section class="hero-section">
-               <h1>Popular Destinations</h1>
-           </section>
-           <section id="destinations">
-               <div class="destination">
-                   <img src="images/shimla.jpg" alt="Shimla">
-                   <div class="destination-info">
-                       <h2>Shimla</h2>
-                       <p>Beautiful hill station with stunning views and a rich history.</p>
-                       <button class="book-now" onclick="bookNow('Shimla')">Book Now</button>
-                       <button class="view-more" onclick="viewMore('shimla.html')">View More</button>
-                   </div>
-               </div>
-               <div class="destination">
-                   <img src="images/manali.jpg" alt="Manali">
-                   <div class="destination-info">
-                       <h2>Manali</h2>
-                       <p>A popular tourist destination with scenic landscapes and adventure sports.</p>
-                       <button class="book-now" onclick="bookNow('Manali')">Book Now</button>
-                       <button class="view-more" onclick="viewMore('manali.html')">View More</button>
-                   </div>
-               </div>
-               <!-- Add more destinations as needed -->
-           </section>
+        <section class="popular-destinations">
+          <div class="container">
+            <h2 class="section-title">Popular Destinations</h2>
+            <div class="destination-list">
+              <div class="destination-item">
+                <img src="./more Destination images/Book1.jpg" alt="Destination 1">
+                <h30 class="destination-title">Shimla</h30>
+                <p class="destination-description">Explore the scenic beauty of Shimla, known for its colonial architecture and snow-capped mountains.</p>
+                <a href="#" class="btn btn-primary">View More</a>
+                <button type="button" onclick="location.href='booking.html'" class="btn btn-primary">Book Now</button>
+              </div>
+              <div class="destination-item">
+                <img src="./more Destination images/Book2.jpg" alt="Destination 2">
+                <h30 class="destination-title">Manali</h30>
+                <p class="destination-description">Discover adventure and tranquility in Manali, famous for its picturesque landscapes and thrilling activities.</p>
+                <a href="#" class="btn btn-primary">View More</a>
+                <button type="button" onclick="location.href='booking.html'" class="btn btn-primary">Book Now</button>
+              </div>
+              <div class="destination-item">
+                <img src="./more Destination images/book3.jpg" alt="Destination 3">
+                <h30 class="destination-title">Dharamshala</h30>
+                <p class="destination-description">Visit Dharamshala, the abode of the Dalai Lama, and experience Tibetan culture amidst serene mountains.</p>
+                <a href="#" class="btn btn-primary">View More</a>
+                
+                  <button type="button" onclick="location.href='booking.html'" class="btn btn-primary">Book Now</button>
+                </li>
+              </div>
+              <!-- Add more destination items as needed -->
+            </div>
+          </div>
+        </section>
        </main>
        
    
@@ -112,7 +121,7 @@
     </div>
   </footer>
 
-  <script src="./assets/js/script.js"></script>
+  <script src="./More destination.js"></script>
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
