--- a/Gallery Page/gallery.html
+++ b/Gallery Page/gallery.html
@@ -29,11 +29,11 @@
         </ul>
         <nav class="navbar" data-navbar>
           <ul class="navbar-list">
-            <li><a href="C:\Users\Asus\OneDrive\Desktop\New folder\Himachal-Trips-main\index.html" class="navbar-link" data-nav-link>Home</a></li>
-            <li><a href="#" class="navbar-link" data-nav-link>About Us</a></li>
-            <li><a href="#destination" class="navbar-link" data-nav-link>Destination</a></li>
+            <li><a href="../index.html" class="navbar-link" data-nav-link>Home</a></li>
+            <li><a href="../About Us Page/aboutus.html" class="navbar-link" data-nav-link>About Us</a></li>
+            <li><a href="../More Destination/more destination.html" class="navbar-link" data-nav-link>Destination</a></li>
             <li><a href="#package" class="navbar-link" data-nav-link>Packages</a></li>
-            <li><a href="#gallery" class="navbar-link" data-nav-link>Gallery</a></li>
+            <li><a href="../Gallery Page/gallery.html" class="navbar-link" data-nav-link>Gallery</a></li>
             <li><a href="#contact" class="navbar-link" data-nav-link>Contact Us</a></li>
           </ul>
         </nav>
