--- a/More Destination/more destination.html
+++ b/More Destination/more destination.html
@@ -29,11 +29,11 @@
         </ul>
         <nav class="navbar" data-navbar>
           <ul class="navbar-list">
-            <li><a href="C:\Users\Asus\OneDrive\Desktop\New folder\Himachal-Trips-main\index.html" class="navbar-link" data-nav-link>Home</a></li>
-            <li><a href="#" class="navbar-link" data-nav-link>About Us</a></li>
-            <li><a href="#destination" class="navbar-link" data-nav-link>Destination</a></li>
+            <li><a href="../index.html" class="navbar-link" data-nav-link>Home</a></li>
+            <li><a href="../About Us Page/aboutus.html" class="navbar-link" data-nav-link>About Us</a></li>
+            <li><a href="more destination.html" class="navbar-link" data-nav-link>Destination</a></li>
             <li><a href="#package" class="navbar-link" data-nav-link>Packages</a></li>
-            <li><a href="#gallery" class="navbar-link" data-nav-link>Gallery</a></li>
+            <li><a href="../Gallery Page/gallery.html" class="navbar-link" data-nav-link>Gallery</a></li>
             <li><a href="#contact" class="navbar-link" data-nav-link>Contact Us</a></li>
           </ul>
         </nav>
@@ -63,14 +63,14 @@
                 <h30 class="destination-title">Shimla</h30>
                 <p class="destination-description">Explore the scenic beauty of Shimla, known for its colonial architecture and snow-capped mountains.</p>
                 <a href="#" class="btn btn-primary">View More</a>
-                <button type="button" onclick="location.href='booking.html'" class="btn btn-primary">Book Now</button>
+                <button type="button" onclick="location.href= 'booking page/booking.html' " class="btn btn-primary">Book Now</button>
               </div>
               <div class="destination-item">
                 <img src="./more Destination images/Book2.jpg" alt="Destination 2">
                 <h30 class="destination-title">Manali</h30>
                 <p class="destination-description">Discover adventure and tranquility in Manali, famous for its picturesque landscapes and thrilling activities.</p>
                 <a href="#" class="btn btn-primary">View More</a>
-                <button type="button" onclick="location.href='booking.html'" class="btn btn-primary">Book Now</button>
+                <button type="button" onclick="location.href=  'booking page/booking.html' " class="btn btn-primary">Book Now</button>
               </div>
               <div class="destination-item">
                 <img src="./more Destination images/book3.jpg" alt="Destination 3">
@@ -78,7 +78,7 @@
                 <p class="destination-description">Visit Dharamshala, the abode of the Dalai Lama, and experience Tibetan culture amidst serene mountains.</p>
                 <a href="#" class="btn btn-primary">View More</a>
                 
-                  <button type="button" onclick="location.href='booking.html'" class="btn btn-primary">Book Now</button>
+                  <button type="button" onclick="location.href = 'booking page/booking.html' " class="btn btn-primary">Book Now</button>
                 </li>
               </div>
               <!-- Add more destination items as needed -->
