--- a/index.html
+++ b/index.html
@@ -115,15 +115,15 @@
           <ul class="navbar-list">
 
             <li>
-              <a href="#home" class="navbar-link" data-nav-link>home</a>
+              <a href="index.html" class="navbar-link" data-nav-link>home</a>
             </li>
 
             <li>
-              <a href="#" class="navbar-link" data-nav-link>about us</a>
+              <a href="About Us Page/aboutus.html" class="navbar-link" data-nav-link>about us</a>
             </li>
 
             <li>
-              <a href="#destination" class="navbar-link" data-nav-link>destination</a>
+              <a href="More Destination/more destination.html" class="navbar-link" data-nav-link>destination</a>
             </li>
 
             <li>
@@ -131,7 +131,7 @@
             </li>
 
             <li>
-              <a href="#gallery" class="navbar-link" data-nav-link>gallery</a>
+              <a href="Gallery Page/gallery.html" class="navbar-link" data-nav-link>gallery</a>
             </li>
 
             <li>
@@ -142,7 +142,7 @@
 
         </nav>
 
-        <button type="button" onclick="location.href='booking.html'" class="btn btn-primary">Book Now</button>
+        <button type="button" onclick="location.href= 'booking page/booking.html' " class="btn btn-primary">Book Now</button>
 
       </div>
     </div>
@@ -169,7 +169,7 @@
           <div class="btn-group">
             <button class="btn btn-primary">Learn more</button>
 
-            <button type="button" onclick="location.href='booking.html'" class="btn btn-secondary">Book now</button>
+            <button type="button" onclick="location.href='booking page/booking.html'" class="btn btn-secondary">Book now</button>
           </div>
 
         </div>
