--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
             </li>
 
             <li>
-              <a href="../Himachal-Trips-main/About Us Page/aboutus.html" class="navbar-link" data-nav-link>about us</a>
+              <a href="./About Us Page/aboutus.html" class="navbar-link" data-nav-link>about us</a>
             </li>
 
             <li>
-              <a href="../Himachal-Trips-main/More Destination/more destination.html" class="navbar-link" data-nav-link>destination</a>
+              <a href="./More Destination/more destination.html" class="navbar-link" data-nav-link>destination</a>
             </li>
 
             <li>
@@ -131,7 +131,7 @@
             </li>
 
             <li>
-              <a href="../Himachal-Trips-main/Gallery Page/gallery.html" class="navbar-link" data-nav-link>gallery</a>
+              <a href="./Gallery Page/gallery.html" class="navbar-link" data-nav-link>gallery</a>
             </li>
 
             <li>
