--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
         </nav>
 
-        <button type="button" onclick="location.href='./booking page/booking.html'" class="btn btn-primary">Book Now</button>
+        <button type="button" onclick="location.href='booking.html'" class="btn btn-primary">Book Now</button>
 
       </div>
     </div>
@@ -169,7 +169,7 @@
           <div class="btn-group">
             <button class="btn btn-primary">Learn more</button>
 
-            <button type="button" onclick="location.href='./booking page/booking.html'" class="btn btn-secondary">Book now</button>
+            <button type="button" onclick="location.href='booking.html'" class="btn btn-secondary">Book now</button>
           </div>
 
         </div>
