--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
         </nav>
 
-        <button type="button" onclick="location.href='booking page/booking.html'" class="btn btn-primary">Book Now</button>
+        <button type="button" onclick="location.href='./booking page/booking.html'" class="btn btn-primary">Book Now</button>
 
       </div>
     </div>
@@ -169,7 +169,7 @@
           <div class="btn-group">
             <button class="btn btn-primary">Learn more</button>
 
-            <button type="button" onclick="location.href='booking page/booking.html'" class="btn btn-secondary">Book now</button>
+            <button type="button" onclick="location.href='./booking page/booking.html'" class="btn btn-secondary">Book now</button>
           </div>
 
         </div>
@@ -348,7 +348,7 @@
           <!-- More Destinations Button -->
           
           <div class="btn-group">
-            <button class="btn btn-primary" onclick="goToUrl('file:///C:/Users/Asus/OneDrive/Desktop/himanchal%20trip/Himachal-Trips-main/More%20Destination/more%20destination.html#')">More destinations</button>
+            <button class="btn btn-primary" onclick="goToUrl('https://aksihol.github.io/Himachal-Trips/More%20Destination/more%20destination.html')">More destinations</button>
           </div>
 
         </div>
@@ -441,7 +441,7 @@
                     <span>/ per person</span>
                   </p>
 
-                  <button type="button" onclick="location.href='booking.html'" class="btn btn-secondary">Book Now</button>
+                  <button type="button" onclick="location.href='./booking page/booking.html'" class="btn btn-secondary">Book Now</button>
 
                 </div>
 
@@ -514,7 +514,7 @@
                     <span>/ per person</span>
                   </p>
 
-                  <button type="button" onclick="location.href='booking.html'" class="btn btn-secondary">Book Now</button>
+                  <button type="button" onclick="location.href='./booking page/booking.html'" class="btn btn-secondary">Book Now</button>
 
                 </div>
 
@@ -588,7 +588,7 @@
                     <span>/ per person</span>
                   </p>
 
-                  <button type="button" onclick="location.href='booking.html'" class="btn btn-secondary">Book Now</button>
+                  <button type="button" onclick="location.href='./booking page/booking.html'" class="btn btn-secondary">Book Now</button>
 
                 </div>
 
