--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
         </nav>
 
-        <button type="button" onclick="location.href='./booking page/booking.html'" class="btn btn-primary">Book Now</button>
+        <button type="button" onclick="location.href='./Booking page/booking.html'" class="btn btn-primary">Book Now</button>
 
       </div>
     </div>
