--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
           <div class="btn-group">
             <button class="btn btn-primary">Learn more</button>
 
-            <button type="button" onclick="location.href='./booking page/booking.html'" class="btn btn-secondary">Book now</button>
+            <button type="button" onclick="location.href='./Booking page/booking.html'" class="btn btn-secondary">Book now</button>
           </div>
 
         </div>
@@ -441,7 +441,7 @@
                     <span>/ per person</span>
                   </p>
 
-                  <button type="button" onclick="location.href='./booking page/booking.html'" class="btn btn-secondary">Book Now</button>
+                  <button type="button" onclick="location.href='./Booking page/booking.html'" class="btn btn-secondary">Book Now</button>
 
                 </div>
 
@@ -514,7 +514,7 @@
                     <span>/ per person</span>
                   </p>
 
-                  <button type="button" onclick="location.href='./booking page/booking.html'" class="btn btn-secondary">Book Now</button>
+                  <button type="button" onclick="location.href='./Booking page/booking.html'" class="btn btn-secondary">Book Now</button>
 
                 </div>
 
@@ -588,7 +588,7 @@
                     <span>/ per person</span>
                   </p>
 
-                  <button type="button" onclick="location.href='./booking page/booking.html'" class="btn btn-secondary">Book Now</button>
+                  <button type="button" onclick="location.href='./Booking page/booking.html'" class="btn btn-secondary">Book Now</button>
 
                 </div>
 
