--- a/More Destination/more destination.html
+++ b/More Destination/more destination.html
@@ -63,21 +63,21 @@
                 <h30 class="destination-title">Shimla</h30>
                 <p class="destination-description">Explore the scenic beauty of Shimla, known for its colonial architecture and snow-capped mountains.</p>
                 <a href="#" class="btn btn-primary">View More</a>
-                <button type="button" onclick="location.href='../booking page/booking.html'" class="btn btn-primary">Book Now</button>
+                <button type="button" onclick="location.href='../Booking page/booking.html'" class="btn btn-primary">Book Now</button>
               </div>
               <div class="destination-item">
                 <img src="./more Destination images/Book2.jpg" alt="Destination 2">
                 <h30 class="destination-title">Manali</h30>
                 <p class="destination-description">Discover adventure and tranquility in Manali, famous for its picturesque landscapes and thrilling activities.</p>
                 <a href="#" class="btn btn-primary">View More</a>
-                <button type="button" onclick="location.href='../booking page/booking.html'" class="btn btn-primary">Book Now</button>
+                <button type="button" onclick="location.href='../Booking page/booking.html'" class="btn btn-primary">Book Now</button>
               </div>
               <div class="destination-item">
                 <img src="./more Destination images/book3.jpg" alt="Destination 3">
                 <h30 class="destination-title">Dharamshala</h30>
                 <p class="destination-description">Visit Dharamshala, the abode of the Dalai Lama, and experience Tibetan culture amidst serene mountains.</p>
                 <a href="#" class="btn btn-primary">View More</a>
-                <button type="button" onclick="location.href='../booking page/booking.html'" class="btn btn-primary">Book Now</button>
+                <button type="button" onclick="location.href='../Booking page/booking.html'" class="btn btn-primary">Book Now</button>
                 </li>
               </div>
               <!-- Add more destination items as needed -->
